ARCHIVE/traefik_stack3/security_groups.tf
resource "aws_security_group" "api_sg" {
  name = "api-sg"
  description = "Allow port 5000"

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 5000
    to_port = 5000
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "APIs Security Group"
  }
}

resource "aws_security_group" "alb_sg" {
  name = "alb-sg"
  description = "Allow port 80"

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "ALB Security Group"
  }
}
